--- a/src/styles.scss
+++ b/src/styles.scss
@@ -185,10 +185,13 @@ html,
 body {
     font-size: 16px !important;
     font-family: Helvetica, Arial, "Helvetica Neue", sans-serif;
-    overflow-x: hidden;
-    overflow-y: auto;
     width: 100%;
     height: 100%;
+}
+
+body {
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .app-main {
@@ -203,7 +206,7 @@ body {
         font-size: 1.18vw !important;
     }
     .app-main,
-    .app-home .search > div > .wrap {
+    .app-home .search>div>.wrap {
         padding-left: 10rem !important;
         padding-right: 10rem !important;
     }
@@ -215,7 +218,7 @@ body {
         font-size: 16.992px !important;
     }
     .app-main,
-    .app-home .search > div > .wrap {
+    .app-home .search>div>.wrap {
         max-width: 1440px;
         padding-left: 170px !important;
         padding-right: 170px !important;
